Crash in [@ mozilla::dom::ExternalHelperAppParent::Init]
Categories
(Core :: Networking, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox72 | --- | unaffected |
firefox73 | blocking | fixed |
firefox74 | --- | fixed |
People
(Reporter: philipp, Assigned: mattwoodrow)
References
(Regression)
Details
(Keywords: crash, regression, Whiteboard: [necko-triaged])
Crash Data
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-release+
|
Details | Review |
[Tracking Requested - why for this release]:
This bug is for crash report bp-700cb11c-7c27-430c-ba87-fc20f0200125.
Top 10 frames of crashing thread:
0 xul.dll mozilla::dom::ExternalHelperAppParent::Init uriloader/exthandler/ExternalHelperAppParent.cpp:83
1 xul.dll mozilla::dom::ContentParent::RecvPExternalHelperAppConstructor dom/ipc/ContentParent.cpp:3826
2 xul.dll mozilla::dom::PContentParent::OnMessageReceived ipc/ipdl/PContentParent.cpp:8388
3 xul.dll mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2134
4 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1241
5 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:486
6 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:109
7 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:308
8 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:290
9 xul.dll nsBaseAppShell::Run widget/nsBaseAppShell.cpp:137
this crash signature is showing up in 73.0b9 and accounting for 1.7% of browser crashes in early stability data there. presumably the disabling of DocumentChannel triggered this spike.
Reporter | ||
Comment 1•5 years ago
|
||
hi matt, can you take a look at that issue?
Updated•5 years ago
|
Comment 2•5 years ago
|
||
DocumentChannel was (supposed to have been) disabled in 73.0b9 (by bug 1610888). This ExternalHelperAppParent::Init crash signature appeared in 72.* builds but not in 73.0b < b9. Perhaps this crash was fixed by DocumentChannel and now reappeared because DocumentChannel was disabled?
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 3•5 years ago
|
||
Updated•5 years ago
|
Comment 4•5 years ago
|
||
This blocks the 73 release given the volume.
Assignee | ||
Comment 5•5 years ago
|
||
Comment on attachment 9123688 [details]
Bug 1611588 - Handle null BrowsingContext in ExternalHelperAppParent. r?bzbarsky
Beta/Release Uplift Approval Request
- User impact if declined: Null pointer crashes for some download cases
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce: No known STR at this point.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Just adding a null check
- String changes made/needed:
Comment 7•5 years ago
|
||
Comment on attachment 9123688 [details]
Bug 1611588 - Handle null BrowsingContext in ExternalHelperAppParent. r?bzbarsky
Fixes a release-blocking topcrash. Approved for 73.0RC1.
Comment 8•5 years ago
|
||
bugherder uplift |
Comment 9•5 years ago
|
||
bugherder |
Comment 12•5 years ago
|
||
Please specify a root cause for this bug. See :tmaity for more information.
Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Description
•