Bug 1611588 - Handle null BrowsingContext in ExternalHelperAppParent. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D61309

--HG--
extra : moz-landing-system : lando